@@ -6,10 +6,13 @@ March 31, 2000 - Jim Whitehead
 
 March 31, 2000 - John Jannotti
 ------------------------------
+ - toc-{add,remove}-buddy - change names, simplify interface
+ - funcall (switch-buffer-function), not apply
  - use tocstr-send-flap, not tocstr-send-flap1 in tnt-keepalive
  - Simplified, sped up and docstringed tnt-rotate-{left,right}
  - Used emacs primitives instead of complicated code to simplify
-   toc-encode, toc-normalize, tnt-strip-html, and tnt-strip-a-href
+   toc-encode, toc-normalize, tnt-strip-html, tnt-strip-a-href, and
+   tnt-completing-read-list
  - Added tnt-separator variable
  - Rename send-away-msg to tnt-send-away-msg
  - Used identity in call to mapcar for tnt-show-chat-participants and
